Fix scrolling on iphones
Add:
position: fixed;

to body in style.css.

Add:
window.addEventListener("scroll", (e) => {
  e.preventDefault();
  window.scrollTo(0, 0);
});

to script.js

--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,7 @@ html {
 
 body {
     overscroll-behavior: none;
+    position: fixed;
     background-color: var(--bg-primary);
     color: var(--clr-primary);
     font-size: 1.6rem;
